--- a/src/app/Modules/cart-order/cart-order.component.html
+++ b/src/app/Modules/cart-order/cart-order.component.html
@@ -160,13 +160,17 @@
             >Congratulatory message</label
           >
         </div>
-        <app-map></app-map>
+        <div class="googlemap">
+          <app-map></app-map>
+        </div>
         <div class="container__address">
           <input
+            #search
             type="text"
             id="inputAddress"
             formControlName="homeAddress"
             placeholder=" "
+            (keyup)="searchMapAdress($event)"
           />
           <label class="container__input-address" for="inputAddress"
             >Address
