--- a/src/app/Modules/map/map.component.html
+++ b/src/app/Modules/map/map.component.html
@@ -1,56 +1,35 @@
-<div class="container__map">
-  <img
-    id="image-area"
-    src="../../../assets/img-registration/Minsk-area.png"
-    alt="area"
-  />
-  <img
-    id="image-arrow"
-    src="../../../assets/img-registration/arrow.png"
-    alt="arrow"
-  />
-  <div class="container__area">
-    <img
-      id="image-square"
-      src="../../../assets/img-registration/square.png"
-      alt="square"
-    />
-    <span class="container__minsk">Delivery area - Minsk</span>
-  </div>
-</div>
-<div class="googlemap" id="map">
-  <agm-map
-    [latitude]="latMap"
-    [longitude]="lngMap"
-    [zoom]="zoom"
-    (mapClick)="mapReadyHandler()"
-    [styles]="styles"
+<agm-map
+  [latitude]="latMap"
+  [longitude]="lngMap"
+  [zoom]="zoom"
+  (mapClick)="mapReadyHandler()"
+  [styles]="styles"
+>
+  <agm-polygon
+    [paths]="paths"
+    [clickable]="true"
+    fillColor="rgb(255,190,200)"
+    strokeColor="#ff5d7d"
+    (polyClick)="getCoords($event)"
   >
-    <agm-polygon
-      [paths]="paths"
-      [clickable]="true"
-      fillColor="rgb(255,190,200)"
-      strokeColor="#ff5d7d"
-      (polyClick)="getCoords($event)"
-    >
-    </agm-polygon>
-    <agm-marker
-      [latitude]="lat"
-      [longitude]="lng"
-      iconUrl="../../../assets/img-registration/arrow.png"
-      [zIndex]="99999999999999"
-      [markerDraggable]="true"
-    >
-    </agm-marker>
-  </agm-map>
-  <div class="container__area">
-    <img
-      id="image-square"
-      src="../../../assets/img-registration/square.png"
-      alt="square"
-    />
-    <span class="container__minsk">Delivery area - Minsk</span>
-  </div>
+  </agm-polygon>
+  <agm-marker
+    [latitude]="lat"
+    [longitude]="lng"
+    iconUrl="../../../assets/img-registration/arrow.png"
+    [zIndex]="99999999999999"
+    [markerDraggable]="true"
+    (dragEnd)="markerDragEnd($event)"
+  >
+  </agm-marker>
+</agm-map>
+<div class="container__area">
+  <img
+    id="image-square"
+    src="../../../assets/img-registration/square.png"
+    alt="square"
+  />
+  <span class="container__minsk">Delivery area - Minsk</span>
 </div>
 <div class="popup" *ngIf="alertShow">
   <div class="container__popup-exit">
