--- a/src/app/Modules/registration/registration.component.html
+++ b/src/app/Modules/registration/registration.component.html
@@ -70,32 +70,17 @@
             [formControlItem]="phone"
           ></app-field-error-registration>
         </div>
-        <div class="container__map">
-          <img
-            id="image-area"
-            src="../../../assets/img-registration/Minsk-area.png"
-            alt="area"
-          />
-          <img
-            id="image-arrow"
-            src="../../../assets/img-registration/arrow.png"
-            alt="arrow"
-          />
-          <div class="container__area">
-            <img
-              id="image-square"
-              src="../../../assets/img-registration/square.png"
-              alt="square"
-            />
-            <span class="container__minsk">Delivery area - Minsk</span>
-          </div>
+        <div class="googlemap">
+          <app-map></app-map>
         </div>
         <div class="container__address">
           <input
+            #search
             type="text"
             id="inputAddress"
             formControlName="homeAddress"
             placeholder=" "
+            (keyup)="searchMapAdress($event)"
           />
           <label class="container__input-address" for="inputAddress"
             >Address</label
