creation stripe page

--- a/src/app/Modules/cart-order/cart-order.component.html
+++ b/src/app/Modules/cart-order/cart-order.component.html
@@ -215,6 +215,7 @@
         </div>
         <button
           type="submit"
+          (click)="checkout(totalPrice)"
           class="container__button"
           [ngClass]="{
             disabled: formValue.invalid || isDisabled || product.length == 0
