--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -131,7 +131,7 @@
               >
                 <span class="user__text">MY ORDERS</span>
                 <p class="user__number">
-                  <span class="user__numb">0</span>
+                  <span class="user__numb">{{ this.quantityOrders }}</span>
                 </p>
               </a>
             </li>
