--- a/src/app/Modules/map/map.component.scss
+++ b/src/app/Modules/map/map.component.scss
@@ -29,7 +29,7 @@ agm-map {
     background: $color_white;
     opacity: 0.95;
     border-radius: 8px;
-    z-index: 999999999;
+    z-index: 98;
     @include wihi(18.2rem, 3.8rem);
 }
 #image-square {
