--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -142,7 +142,7 @@
     width: 27.3rem;
     height: 18.1rem;
     margin: 3.3rem 0 2rem 3rem;
-    box-shadow: 0px 10px 25px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
     .user__li-1,
     .user__li-2 {
         margin: 2.4rem 2rem;
@@ -261,7 +261,7 @@
         bottom: 0;
         right: 0;
         text-align: center;
-        background: url("../../assets/img-home/Rectangle\ 13.png") 0 0 no-repeat;
+        background: url("../../assets/img-home/Rectangle 13.png") 0 0 no-repeat;
         background-size: 100% 100%;
         padding-top: 4rem;
         .mobile__li {
